yaml/hello_arc_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-arc-ingress
  namespace: hello-arc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: podinfo
          servicePort: 8080
